<resources>
    <string name="app_name">LogicaApp</string>
    <string name="title">Conjunction</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="ab">A^B</string>
    <string name="answer">T or F</string>
    <string name="submit">Submit answers</string>
    <string name="correct">The correct number of answers is: </string>
</resources>
